Fix issue of community section overlapping quotes

--- a/app/assets/stylesheets/community.css.scss
+++ b/app/assets/stylesheets/community.css.scss
@@ -1,6 +1,7 @@
 @import "compass/css3";
 
 .community {
+  margin-top: 110px;
   a {
     color: #3f5765;
   }
